[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synchra.py"
version = "0.1.4"
description = "A modern, async-first Python SDK for the Synchra API v2.0."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bluscream", email = "pypi@minopia.de"},
    {name = "Antigravity.AI", email = "antigravity@google.com" }
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0,<2.11",
    "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "datamodel-code-generator",
    "build",
    "twine"
]

[tool.setuptools.packages.find]
include = ["synchra*"]
exclude = ["synchra_cli*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
